--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "dotenv": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-text-truncate": "^0.16.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
