--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.3",
     "react-text-truncate": "^0.16.0",
     "web-vitals": "^1.1.2"
