--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.3",
-    "react-text-truncate": "^0.16.0",
-    "web-vitals": "^1.1.2"
+    "react-text-truncate": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
